--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vbod Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -22,7 +23,10 @@
             <section id="hero">
                 <h1>Pembuatan Website yang Profesional</h1>
                 <p>Buat website yang sesuai dengan kebutuhan Anda dengan harga yang terjangkau.</p>
-                <button class="btn-cta" id="whatsapp-button">Buat Website Sekarang</button>
+                <button class="btn-cta" id="whatsapp-button">
+                    <i class="fab fa-whatsapp"></i>
+                </button>
+                
             </section>
             <section id="features">
                 <h2>Fitur yang Kami Tawarkan</h2>
